[package]
edition = "2021"
name = "egui_html5_canvas2d_demo"
version = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = {git = "https://github.com/rustytsuki/egui", branch = "rust-office", default-features = false, features = ["html5_canvas_2d", "default_fonts"]}
egui_demo_lib = {git = "https://github.com/rustytsuki/egui", branch = "rust-office"}
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2